* Ensure Fuse.Object.inspect() avoids treating DOM nodes as generic Object objects. [jddalton]

* unit test: Fix Ajax reference in the emulated DOMParser object. [jddalton]

* Make Fuse.RegExp() calls as a function instead of with a new expression. [jddalton]

* Escape a forward slash in the regexp pattern of Fuse.Object.isSameOrigin(). [Diego Perini, jddalton]

* Remove unneeded Chrome fix for Fuse.String#replace as well as the STRING_REPLACE_BUGGY_WITH_GLOBAL_FLAG_AND_EMPTY_PATTERN feature detection. [jddalton]

* Optimize Fuse.String#replace and ensure it follows specification with regard to setting the pattern.lastIndex. [jddalton, Samuel Lebeau]

* Remove unneeded IE8 RC1 fork in Fuse.List.fromNodeList(). [Diego Perini]

* Optimize Fuse.Template by converting the pattern once during instanciation. [jddalton, Samuel Lebeau]

* Make Fuse.String#stripTags more closely follow the W3C specification. [Prototype LH #674] [igor, jddalton, kangax]

* Add Fuse.String#lastIndexOf if missing from the sandboxed String. [jddalton]

* Allow Fusebox to remove the iframes used to create the native sandboxes in Opera 9.5-10a. [jddalton]

* Add support for Peppy and Dojo Acme JavaScript CSS Selector engines and update other engines. [jddalton] 

* Correct many coding issues related to the unit test rewrites. [jddalton]
  Note: Backwards compatibility warning.
   - Reduce repeated code by creating/removing aliases:
     * Ajax.Response#getAllHeaders -> Ajax.Response#getAllResponseHeaders
     * Ajax.Response#getResponseHeader -> Ajax.Response#getHeader
     * Fuse.Util.$$() -> Fuse.query()
     * Remove Fuse.RegExp#match alias of Fuse.RegExp#test
 
   - New Fixes/Optimizations
     * Make Fuse.Class, Fuse.Range and others perform as if by a new expression when they, the constructors, are called as a function.
     * Ensure, for IE, that Element#writeAttribute coerces values to strings before setting them. [kangax]
     * Make more methods return extended natives